Animation updates and added project section

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/jetbrains-mono": "^5.2.5",
     "@fontsource/kdam-thmor": "^4.5.7",
     "@fontsource/kdam-thmor-pro": "^5.1.1",
+    "@fontsource/vt323": "^5.2.5",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
